Lucene contrib change Log

For more information on past and future Lucene versions, please see:
http://s.apache.org/luceneversions

======================= Lucene 3.6.2 =======================

Bug Fixes

* LUCENE-4109: BooleanQueries are not parsed correctly with the
  flexible query parser. (Karsten Rauch via Robert Muir)

======================= Lucene 3.6.1 ================

Bug Fixes

 * LUCENE-3940: fix Kuromoji to not produce invalid token graph due to UNK 
   with punctuation being decompounded.  (Mike McCandless)

 * LUCENE-3942: SynonymFilter sets PositionLength correctly when possible.  
   (Mike McCandless)

 * LUCENE-3969: Throw IAE on bad arguments that could cause confusing errors in 
   CompoundWordTokenFilterBase, PositionFilter, SnowballFilter, 
   PathHierarchyTokenizer, ReversePathHierarchyTokenizer and WikipediaTokenizer.
   ShingleFilter populates PositionLengthAttribute. Fixed PathHierarchyTokenizer 
   to reset() all state. Protect against AIOOBE in ReversePathHierarchyTokenizer 
   if skip is large. Fixed wrong final offset calculation in 
   PathHierarchyTokenizer. (Uwe Schindler, Mike McCandless, Robert Muir)
  
 * LUCENE-4022: Offline Sorter used to build spellcheck & suggest dictionaries
   wrongly used minimum sort buffer resulting in potentially slow FST &
   Dictionary building. (Simon Willnauer) 

 * LUCENE-4060: Fix a synchronization bug in 
   DirectoryTaxonomyWriter.addTaxonomies(). Also, the method has been renamed to
   addTaxonomy and now takes only one Directory and one OrdinalMap.
   (Shai Erera, Gilad Barkai)

 * LUCENE-4074: FST Sorter BufferSize creates a negative buffer size due to an
   32 bit signed integer overflow if BufferSize >= 2048MB is passed.
   (Simon Willnauer)

 * LUCENE-4079: Fixed loading of Hunspell dictionaries that use aliasing (AF rules)
  (Ludovic Boutros via Chris Male)

 * LUCENE-4209: Fix FSTCompletionLookup to close its sorter, so that it won't